--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,32 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <meta name="author" content="" />
-    <meta name="keywords" content="" />
+    <meta name="theme-color" content="#020202" />
+    <meta name="description" content="Web home of Ebuka Nwaju - Frontend web Developer, UI/UX Designer, Writer, Budding Radiographer and recreational model." />
+    <meta name="author" content="Ebuka Nwaju" />
+    <meta name="keywords" content="Developer, UI Designer, Ux Designer, Writer, Radiographer, Frontend" />
     <meta name="" content="" />
+    <link rel="shortcut icon" type="image/x-icon" href="https://images.squarespace-cdn.com/content/v1/5e52b5f7b2535b36bd6705b6/1583698109185-QQ0QC1XT575UCXR234UF/ke17ZwdGBToddI8pDm48kIIl1RUom9LEB81U900xm6FZw-zPPgdn4jUwVcJE1ZvWhcwhEtWJXoshNdA9f1qD7aWTft8W2mJ3MMBYfzdTZ2wf-PM4bexdbeLZP_vPyWQXVglC2WL9cMusYabFHGO5kw/favicon.ico?format=100w"/>
+    <link rel="canonical" href="https://theebuka.com"/>
+    <meta property="og:site_name" content="Ebuka Nwaju"/>
+    <meta property="og:title" content="Ebuka Nwaju"/>
+    <meta property="og:url" content="https://theebuka.com"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:description" content="Web home of Ebuka Nwaju - Frontend web developer, UI/UX designer, writer, budding radiographer and recreational model."/>
+    <meta property="og:image" content="http://static1.squarespace.com/static/5e52b5f7b2535b36bd6705b6/t/5e52cf77fe69f273e6e6d3dd/1582485368127/logoimg-03.png?format=1500w"/>
+    <meta property="og:image:width" content="160"/>
+    <meta property="og:image:height" content="160"/>
+    <meta itemprop="name" content="Ebuka Nwaju"/>
+    <meta itemprop="url" content="https://theebuka.com"/>
+    <meta itemprop="description" content="Web home of Ebuka Nwaju - Frontend web developer, UI/UX designer, writer, budding radiographer and recreational model."/>
+    <meta itemprop="thumbnailUrl" content="http://static1.squarespace.com/static/5e52b5f7b2535b36bd6705b6/t/5e52cf77fe69f273e6e6d3dd/1582485368127/logoimg-03.png?format=1500w"/>
+    <link rel="image_src" href="http://static1.squarespace.com/static/5e52b5f7b2535b36bd6705b6/t/5e52cf77fe69f273e6e6d3dd/1582485368127/logoimg-03.png?format=1500w" />
+    <meta itemprop="image" content="http://static1.squarespace.com/static/5e52b5f7b2535b36bd6705b6/t/5e52cf77fe69f273e6e6d3dd/1582485368127/logoimg-03.png?format=1500w"/>
+    <meta name="twitter:title" content="Ebuka Nwaju"/>
+    <meta name="twitter:image" content="http://static1.squarespace.com/static/5e52b5f7b2535b36bd6705b6/t/5e52cf77fe69f273e6e6d3dd/1582485368127/logoimg-03.png?format=1500w"/>
+    <meta name="twitter:url" content="https://theebuka.com"/>
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:description" content="Web home of Ebuka Nwaju - Frontend web developer, UI/UX designer, writer, budding radiographer and recreational model."/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
