--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:description" content="Web home of Ebuka Nwaju - Frontend web developer, UI/UX designer, writer, budding radiographer and recreational model."/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
